Fixed header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ header {
 	top: 0px;
 	left: 0px;
 	width: 100%;
+	z-index: 1;
 
 	color: white;
 	background: #222;
